Link to solitaire
Adding a link to solitaire

--- a/menus.css
+++ b/menus.css
@@ -751,10 +751,10 @@ input:checked + .slider:before {
 	border-radius:15px;
 	background:black;
 	color:white;
-	width:180pt;
-	height:260pt;
-	right: 15pt;
-	bottom: -200pt;
+	width:234px;
+	height:420px;
+	right: 20px;
+	bottom: -260px;
 	box-shadow: 10px 10px 0px rgba(0,0,0,0.5);
 	z-index: 1000;
 	opacity:0;
@@ -814,6 +814,16 @@ input:checked + .slider:before {
 .more_games_icon_title2 {
 	font-size: 8pt;
 	line-height: 8pt; 
+}
+
+#more_games_icon_solitaire {
+	position: absolute;
+	background-image: url('images/app_icon_solitaire.png');
+	background-size: cover;
+	width: 60px;
+	height: 56px;
+	top: 6px;
+	left: 12px;
 }
 
 #more_games_icon_hearts {
